# src/main/java/konkuk/ptal/controller/UserController.java
@@ -13,10 +13,8 @@ import konkuk.ptal.service.IUserService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.security.core.annotation.AuthenticationPrincipal;
+import org.springframework.web.bind.annotation.*;
 
 @RestController
 @RequestMapping("/api/v1") // Base path for user-specific operations
@@ -48,49 +46,47 @@ public class UserController {
                 .body(ApiResponse.success(ResponseCode.REVIEWER_REGISTER_SUCCESS.getMessage(), responseDto));
     }
 
-    // 아래 메서드들 openAPI에 누락돼있으나 필요해보임.
-//    @GetMapping("/reviewee/{id}")
-//    public ResponseEntity<ApiResponse<CreateRevieweeResponse>> getReviewee(@PathVariable Long id) {
-//        Reviewee reviewee = userService.getReviewee(id);
-//        CreateRevieweeResponse responseDto = CreateRevieweeResponse.from(reviewee);
-//        return ResponseEntity
-//                .status(HttpStatus.OK)
-//                .body(ApiResponse.success(ResponseCode.DATA_RETRIEVED.getMessage(), responseDto));
-//    }
-//
-//    @PutMapping("/reviewee/{id}")
-//    public ResponseEntity<ApiResponse<CreateRevieweeResponse>> updateReviewee(
-//            @PathVariable Long id,
-//            @Valid @RequestBody CreateRevieweeRequest requestDto,
-//            @AuthenticationPrincipal Long userId) {
-//        Reviewee updatedReviewee = userService.updateReviewee(id, requestDto, userId);
-//        CreateRevieweeResponse responseDto = CreateRevieweeResponse.from(updatedReviewee);
-//        return ResponseEntity
-//                .status(HttpStatus.OK)
-//                .body(ApiResponse.success(ResponseCode.OK.getMessage(), responseDto));
-//    }
+    @GetMapping("/reviewee/{id}")
+    public ResponseEntity<ApiResponse<CreateRevieweeResponse>> getReviewee(@PathVariable Long id) {
+        Reviewee reviewee = userService.getReviewee(id);
+        CreateRevieweeResponse responseDto = CreateRevieweeResponse.from(reviewee);
+        return ResponseEntity
+                .status(HttpStatus.OK)
+                .body(ApiResponse.success(ResponseCode.DATA_RETRIEVED.getMessage(), responseDto));
+    }
 
-//
-//    @GetMapping("/reviewer/{id}")
-//    public ResponseEntity<ApiResponse<CreateReviewerResponse>> getReviewer(@PathVariable Long id) {
-//        Reviewer reviewer = userService.getReviewer(id);
-//        CreateReviewerResponse responseDto = CreateReviewerResponse.from(reviewer);
-//        return ResponseEntity
-//                .status(HttpStatus.OK)
-//                .body(ApiResponse.success(ResponseCode.DATA_RETRIEVED.getMessage(), responseDto));
-//    }
-//
-//    @PutMapping("/reviewer/{id}")
-//    public ResponseEntity<ApiResponse<CreateReviewerResponse>> updateReviewer(
-//            @PathVariable Long id,
-//            @Valid @RequestBody CreateReviewerRequest requestDto,
-//            @AuthenticationPrincipal Long userId) {
-//        Reviewer updatedReviewer = userService.updateReviewer(id, requestDto, userId);
-//        CreateReviewerResponse responseDto = CreateReviewerResponse.from(updatedReviewer);
-//        return ResponseEntity
-//                .status(HttpStatus.OK)
-//                .body(ApiResponse.success(ResponseCode.DATA_RETRIEVED.getMessage(), responseDto));
-//    }
+    @PutMapping("/reviewee/{id}")
+    public ResponseEntity<ApiResponse<CreateRevieweeResponse>> updateReviewee(
+            @PathVariable Long id,
+            @Valid @RequestBody CreateRevieweeRequest requestDto,
+            @AuthenticationPrincipal Long userId) {
+        Reviewee updatedReviewee = userService.updateReviewee(id, requestDto, userId);
+        CreateRevieweeResponse responseDto = CreateRevieweeResponse.from(updatedReviewee);
+        return ResponseEntity
+                .status(HttpStatus.OK)
+                .body(ApiResponse.success(ResponseCode.OK.getMessage(), responseDto));
+    }
+
+    @GetMapping("/reviewer/{id}")
+    public ResponseEntity<ApiResponse<CreateReviewerResponse>> getReviewer(@PathVariable Long id) {
+        Reviewer reviewer = userService.getReviewer(id);
+        CreateReviewerResponse responseDto = CreateReviewerResponse.from(reviewer);
+        return ResponseEntity
+                .status(HttpStatus.OK)
+                .body(ApiResponse.success(ResponseCode.DATA_RETRIEVED.getMessage(), responseDto));
+    }
+
+    @PutMapping("/reviewer/{id}")
+    public ResponseEntity<ApiResponse<CreateReviewerResponse>> updateReviewer(
+            @PathVariable Long id,
+            @Valid @RequestBody CreateReviewerRequest requestDto,
+            @AuthenticationPrincipal Long userId) {
+        Reviewer updatedReviewer = userService.updateReviewer(id, requestDto, userId);
+        CreateReviewerResponse responseDto = CreateReviewerResponse.from(updatedReviewer);
+        return ResponseEntity
+                .status(HttpStatus.OK)
+                .body(ApiResponse.success(ResponseCode.DATA_RETRIEVED.getMessage(), responseDto));
+    }
 
 // 추가로 리뷰어목록도 누락돼있는거같은데 자세하게 함 봐야할듯..
 // 문서에 있는 List쪽은 다 누락된거같음
